--- a/Advanced_Python_Exam.ipynb
+++ b/Advanced_Python_Exam.ipynb
@@ -212,7 +212,10 @@
    "id": "82cd65d4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#voici le lien de mon application Streamlit\n",
+    "#  https://pythonappb3-stephane.streamlit.app/"
+   ]
   }
  ],
  "metadata": {
